--- a/package.json
+++ b/package.json
@@ -4,14 +4,21 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon server/app.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "concurrently \"npm start \" \"npm start --prefix client\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.0",
+    "concurrently": "^5.3.0",
+    "cookie-parser": "^1.4.5",
+    "create-react-app": "^4.0.1",
     "express": "^4.17.1",
-    "mongoose": "^5.11.12"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.11.12",
+    "readline-sync": "^1.4.10"
   }
 }
